[package]
name = "impersonate"
version = "0.0.1"
authors = ["Alex Yang <aleozlx@gmail.com>"]
description = "Become someone else in your Rust app"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aleozlx/impersonate.git"
build = "src/build.rs"

[dependencies]
nix = "0.12"

[build-dependencies]
cc = "1.0"
